--- a/public/backend/css/main.css
+++ b/public/backend/css/main.css
@@ -1647,7 +1647,7 @@ pre code {
 .table thead th {
   vertical-align: bottom;
   border-bottom: 2px solid #dee2e6;
- color: #fff; 
+  color: #101010; 
 }
 
 .table tbody+tbody {
